# Pollen-Prediction-TFG

./: LICENSE  README.md  pyproject.toml
notebooks/: 01-00_Introduction.ipynb  02-00_Forecasting.ipynb  02-01_Forecasting_with_Moirai.ipynb  02-02_Forecasting_with_Chronos.ipynb  03-00_Evaluate_&_Benchmark.ipynb  03-01_Evaluate_models.ipynb  03-02_Benchmark.ipynb
outputs/evaluations/: mps_evaluation_percentage_2000-2022_-182_365_7_0.025_0.975.csv  mps_evaluation_threshold_2000-2022_-182_365_7_3_3.csv
outputs/timing/: models_runtime.csv
requirements/: requirements_chronos.txt  requirements_moirai.txt  requirements_nbeats.txt
src/ppf/: get_evaluations.py  get_mps.py  get_predictions.py  non_leap_date_utils.py  plot_random_model_distribution.py  save_predictions.py  save_time.py  statistical_comparisons.py  test_all_models.py
